# mcis-sdk

./: README.md  authorization.py  configs.py  core.py  decorator.py  models.py  requirements.txt  setup.cfg  setup.py  user_authentication.py  utils.py
core/: etopup.py  ring_back_tone.py
src/core/: ring_back_tone.py  user_authentication.py
src/mci_services/: decorator.py  models.py  utils.py
src/mci_services/core/: authentication.py  core.py  etopup.py  ring_back_tone.py  user_authentication.py
src/mci_services/core/Mixins/: service_mixins.py
src/mci_services/mixins/: service_mixins.py
