[metadata]
name = mci_service_sdk
version = 0.0.1
author = Shahin Abolqasemi
author_email = shahin.abolqasemi@yahoo.com
description = An SDK to simplify MCI APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shahinAbolqasemi/mcis-sdk 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
